--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-slick": "^0.29.0",
     "react-tabs": "^5.1.0",
     "react-toastify": "^9.1.1",
+    "react-use-downloader": "^1.2.4",
     "sass": "^1.56.0",
     "slick-carousel": "^1.8.1"
   }
